[gd_scene load_steps=20 format=3 uid="uid://bsdnycgws7kc3"]

[ext_resource type="Texture2D" uid="uid://vfq26ad7yivu" path="res://barkley2/assets/b2_original/images/merged/s_mg_diving_goblet.png" id="1_2phb0"]
[ext_resource type="Script" uid="uid://d0doyb6eadd1o" path="res://barkley2/scenes/Objects/_minigames/Diving/o_mg_diving_pickup_goblet.gd" id="1_nbrhy"]
[ext_resource type="Texture2D" uid="uid://b6a7o5kbwaitr" path="res://barkley2/assets/b2_original/images/merged/s_mg_diving_gobletPickup.png" id="2_nbrhy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7yy67"]
atlas = ExtResource("1_2phb0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr7l5"]
atlas = ExtResource("1_2phb0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_84mam"]
atlas = ExtResource("1_2phb0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s88f"]
atlas = ExtResource("1_2phb0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hasla"]
atlas = ExtResource("2_nbrhy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_430p4"]
atlas = ExtResource("2_nbrhy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtfht"]
atlas = ExtResource("2_nbrhy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe1a1"]
atlas = ExtResource("2_nbrhy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2exuh"]
atlas = ExtResource("2_nbrhy")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_073vh"]
atlas = ExtResource("2_nbrhy")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev6yg"]
atlas = ExtResource("2_nbrhy")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_li81i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yy67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr7l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84mam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s88f")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hasla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_430p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtfht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe1a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2exuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_073vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev6yg")
}],
"loop": false,
"name": &"picked",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5cusq"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tv2c4"]
polygon = PackedVector2Array(0, 5, -1, 3, -2, -1, 0, -5, 2, -1, 1, 3)

[sub_resource type="Gradient" id="Gradient_e115q"]
offsets = PackedFloat32Array(0, 0.59076923)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rjynl"]
gradient = SubResource("Gradient_e115q")
fill = 1
fill_from = Vector2(0.508547, 0.48290598)
fill_to = Vector2(0, 0)

[node name="o_mg_diving_pickup_goblet" type="Area2D"]
script = ExtResource("1_nbrhy")
cup_name = null

[node name="s_mg_diving_goblet" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_li81i")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5cusq")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_tv2c4")
occluder_light_mask = 2

[node name="flash" type="PointLight2D" parent="."]
energy = 0.1
texture = SubResource("GradientTexture2D_rjynl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="s_mg_diving_goblet" to="." method="_on_s_mg_diving_goblet_animation_finished"]
